:heavy_plus_sign: Add dependencies
Signed-off-by: 0x6f736f646f <blackd0t@protonmail.com>

--- a/handmotion/platformio.ini
+++ b/handmotion/platformio.ini
@@ -13,12 +13,11 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_speed = 115200
-upload_port = /dev/ttyUSB0 ;set your port
-
-; change microcontroller
+upload_port = /dev/ttyUSB0
 board_build.mcu = esp8266
-
-; change MCU frequency
 board_build.f_cpu = 80000000L
-
 build_flags = -D LED_BUILTIN=2
+lib_deps = 
+	jrowberg/I2Cdevlib-Core@^1.0.0
+	jrowberg/I2Cdevlib-MPU6050@^1.0.0
+	adafruit/Adafruit MQTT Library@^2.4.3
