--- a/handmotion/makefile
+++ b/handmotion/makefile
@@ -1,13 +1,13 @@
-BIN = arm-none-eabi-objcopy
-STL = st-flash
+ESPTOOL = esptool.py
+FFLAGS = --chip esp32 --port /dev/ttyUSB0
+BFLAG = --baud 460800
 
 clean:
-	rm -f .pio/build/esp12e/firmware.elf *.bin
+	rm -f .pio/build/esp12e/firmware.*
 
 flash: clean
 	pio run
-	$(BIN) -O binary .pio/build/esp12e/firmware.elf app.bin
-	$(STL) write app.bin 0x8000000
+	$(ESPTOOL) $(FFLAGS) $(BFLAG) write_flash --flash_size=detect 0 .pio/build/esp12e/firmware.bin
 
 erase:
-	$(STL) erase
+	$(ESPTOOL) $(FFLAGS) erase_flash
