:construction_worker: Add build
Signed-off-by: 0x6f736f646f <blackd0t@protonmail.com>

--- a/handmotion/makefile
+++ b/handmotion/makefile
@@ -5,6 +5,9 @@ BFLAG = --baud 460800
 clean:
 	rm -f .pio/build/esp12e/firmware.*
 
+build:
+	pio run
+
 flash: clean
 	pio run
 	$(ESPTOOL) $(FFLAGS) $(BFLAG) write_flash --flash_size=detect 0 .pio/build/esp12e/firmware.bin
