:bug: Current Bug
Signed-off-by: 0x6f736f646f <blackd0t@protonmail.com>

--- a/handmotion/platformio.ini
+++ b/handmotion/platformio.ini
@@ -16,8 +16,15 @@ upload_speed = 115200
 upload_port = /dev/ttyUSB0
 board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
+upload_protocol = esptool
 build_flags = -D LED_BUILTIN=2
 lib_deps = 
+	ESP8266WiFi
 	jrowberg/I2Cdevlib-Core@^1.0.0
 	jrowberg/I2Cdevlib-MPU6050@^1.0.0
 	adafruit/Adafruit MQTT Library@^2.4.3
+lib_ignore = WiFi101
+
+platform_packages = 
+    ; toolchain-xtensa@~2.100100.0
+    ;framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
