--- a/mobileplatform/mainmcu/platformio.ini
+++ b/mobileplatform/mainmcu/platformio.ini
@@ -14,11 +14,12 @@ board = genericSTM32F103C8
 framework = mbed
 upload_flags = -c set CPUTAPID 0x2ba01477
 debug_tool = stlink
-debug_server =
-  $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd  
-  -s $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts
-  -f interface/stlink.cfg
-  -c "transport select hla_swd"
-  -c "set CPUTAPID 0x2ba01477"
-  -f target/stm32f1x.cfg
-  -c "reset_config none"
+debug_server = 
+	$PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
+	-s $PLATFORMIO_CORE_DIR/packages/tool-openocd/scripts
+	-f interface/stlink.cfg
+	-c "transport select hla_swd"
+	-c "set CPUTAPID 0x2ba01477"
+	-f target/stm32f1x.cfg
+	-c "reset_config none"
+lib_deps = mbed-sam-grove/BufferedSerial@0.0.0+sha.7e5e866edd3d
