--- a/mobileplatform/mainmcu/platformio.ini
+++ b/mobileplatform/mainmcu/platformio.ini
@@ -22,4 +22,7 @@ debug_server =
 	-c "set CPUTAPID 0x2ba01477"
 	-f target/stm32f1x.cfg
 	-c "reset_config none"
-lib_deps = mbed-sam-grove/BufferedSerial@0.0.0+sha.7e5e866edd3d
+build_flags = 
+	-D PIO_FRAMEWORK_MBED_RTOS_PRESENT
+	-D MBED_CONF_RTOS_PRESENT
+lib_deps = mbed-komaida424/SoftPWM@0.0.0+sha.7918ce37626c
