--- a/mobileplatform/wificlient/platformio.ini
+++ b/mobileplatform/wificlient/platformio.ini
@@ -13,12 +13,12 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_speed = 115200
-upload_port = /dev/ttyUSB0 ;set your port
-
-; change microcontroller
+upload_port = /dev/ttyUSB0
 board_build.mcu = esp8266
-
-; change MCU frequency
 board_build.f_cpu = 80000000L
-
 build_flags = -D LED_BUILTIN=2
+lib_ldf_mode = deep+
+lib_deps = 
+	powerbroker2/SerialTransfer@^3.1.2
+	marvinroger/AsyncMqttClient@^0.9.0
+	bblanchon/ArduinoJson@^6.19.4
