Move from libraries to main
Signed-off-by: 0x6f736f646f <blackd0t@protonmail.com>

--- a/handmotion/platformio.ini
+++ b/handmotion/platformio.ini
@@ -19,12 +19,11 @@ board_build.f_cpu = 80000000L
 upload_protocol = esptool
 build_flags = -D LED_BUILTIN=2
 lib_deps = 
-	ESP8266WiFi
 	jrowberg/I2Cdevlib-Core@^1.0.0
 	jrowberg/I2Cdevlib-MPU6050@^1.0.0
-	adafruit/Adafruit MQTT Library@^2.4.3
-lib_ignore = WiFi101
-
+	bblanchon/ArduinoJson@^6.19.4
+	marvinroger/AsyncMqttClient@^0.9.0
+lib_ldf_mode = deep+
 platform_packages = 
-    ; toolchain-xtensa@~2.100100.0
-    ;framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+	; toolchain-xtensa@~2.100100.0
+	; framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
