--- a/handmotion/platformio.ini
+++ b/handmotion/platformio.ini
@@ -18,6 +18,8 @@ board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 upload_protocol = esptool
 build_flags = -D LED_BUILTIN=2
+extra_scripts = pre:extra_script.py
+check_tool = cppcheck
 lib_deps = 
 	jrowberg/I2Cdevlib-Core@^1.0.0
 	jrowberg/I2Cdevlib-MPU6050@^1.0.0
