--- a/mobileplatform/mainmcu/platformio.ini
+++ b/mobileplatform/mainmcu/platformio.ini
@@ -12,6 +12,8 @@
 platform = ststm32
 board = genericSTM32F103C8
 framework = mbed
+extra_scripts = pre:extra_script.py
+check_tool = cppcheck
 upload_flags = -c set CPUTAPID 0x2ba01477
 debug_tool = stlink
 debug_server = 
