--- a/mobileplatform/wificlient/platformio.ini
+++ b/mobileplatform/wificlient/platformio.ini
@@ -16,6 +16,8 @@ upload_speed = 115200
 upload_port = /dev/ttyUSB0
 board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
+extra_scripts = pre:extra_script.py
+check_tool = cppcheck
 build_flags = -D LED_BUILTIN=2
 lib_ldf_mode = deep+
 lib_deps = 
