--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,14 +3,16 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  Build:
-    name: Build
+  Ubuntu:
+    name: Build on ubuntu
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
       
       - name: Install Linux dependencies
         run: |
@@ -30,8 +32,15 @@ jobs:
         run: cd mobileplatform/mainmcu && platformio run
 
   Windows:
+    name: Build on windows
     runs-on: windows-2019
     steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"    
       - name: Activate msys2 & mingw64
         run: |
           echo "C:\msys64\usr\bin" >> $env:GITHUB_PATH
@@ -40,7 +49,7 @@ jobs:
         run: |
           pacman --noconfirm -S --needed mingw-w64-x86_64-SDL2
           gcc --version
-      - uses: actions/checkout@v2
+
       - name: Install PlatformIO
         run: |
           python -m pip install --upgrade pip
