--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
         run: cd handmotion && platformio run
       - name: Build wificlient
         run: cd mobileplatform/wificlient && platformio run
-      - name: Build mainmcu
-        run: cd mobileplatform/mainmcu && platformio run
+      # - name: Build mainmcu
+      #   run: cd mobileplatform/mainmcu && platformio run
 
   Windows:
     name: Build on windows
@@ -40,7 +40,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"    
+          python-version: "3.8"    
       - name: Activate msys2 & mingw64
         run: |
           echo "C:\msys64\usr\bin" >> $env:GITHUB_PATH
@@ -59,5 +59,5 @@ jobs:
         run: cd handmotion && platformio run
       - name: Build wificlient
         run: cd mobileplatform/wificlient && platformio run
-      - name: Build mainmcu
-        run: cd mobileplatform/mainmcu && platformio run
+      # - name: Build mainmcu
+      #   run: cd mobileplatform/mainmcu && platformio run
