--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,8 @@ jobs:
         run: cd handmotion && platformio run
       - name: Build wificlient
         run: cd mobileplatform/wificlient && platformio run
-      # - name: Build mainmcu
-      #   run: cd mobileplatform/mainmcu && platformio run
+      - name: Build mainmcu
+        run: cd mobileplatform/mainmcu && platformio run
 
   Windows:
     name: Build on windows
@@ -59,5 +59,5 @@ jobs:
         run: cd handmotion && platformio run
       - name: Build wificlient
         run: cd mobileplatform/wificlient && platformio run
-      # - name: Build mainmcu
-      #   run: cd mobileplatform/mainmcu && platformio run
+      - name: Build mainmcu
+        run: cd mobileplatform/mainmcu && platformio run
