--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -51,13 +51,13 @@ jobs:
           output-file: "false"
       - name: Create Release # This action will create the actual release
         uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false' }
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.changelog.outputs.tag }
-          release_name: ${{ steps.changelog.outputs.tag }
-          body: ${{ steps.changelog.outputs.clean_changelog }
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
 
       - uses: ncipollo/release-action@v1
         with:
