--- a/backend/docker/addons/influxdb-writer/docker-compose.yml
+++ b/backend/docker/addons/influxdb-writer/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - omicron-influxdb-volume:/var/lib/influxdb
 
   influxdb-writer:
-    image: mainflux/influxdb-writer:${OR_RELEASE_TAG}
+    image: ghcr.io/0x6f736f646f/omicron_influxdb-writer:${OR_RELEASE_TAG}
     container_name: omicron-influxdb-writer
     depends_on:
       - influxdb
