--- a/mobileplatform/mainmcu/platformio.ini
+++ b/mobileplatform/mainmcu/platformio.ini
@@ -27,4 +27,5 @@ debug_server =
 build_flags = 
 	-D PIO_FRAMEWORK_MBED_RTOS_PRESENT
 	-D MBED_CONF_RTOS_PRESENT
-lib_deps = mbed-komaida424/SoftPWM@0.0.0+sha.7918ce37626c
+lib_deps = 
+	mbed-komaida424/SoftPWM@0.0.0+sha.7918ce37626c
