--- a/backend/Setup/config.env
+++ b/backend/Setup/config.env
@@ -20,3 +20,5 @@ sdk.Channel{
   {"bn":"mobile","n":"pitch","u":"m/s","v":distance},
   {"n":"yaw","u":"rad","v":degree}
 ]
+
+curl -s -S -i -X POST -H "Authorization: Thing 7686eb82-d6b5-4513-b559-d867c8ed85e3" -H "Content-Type: application/senml+json" http://localhost/http/channels/fadfba2a-297c-49ef-87f3-c3b4745ce2ec/messages -d '[{"bn":"mobile","n":"pitch","u":"m/s","v":1.0},{"n":"yaw","u":"rad","v":270}]'
