:ambulance: seperate build and flash
Signed-off-by: 0x6f736f646f <blackd0t@protonmail.com>

--- a/mobileplatform/mainmcu/makefile
+++ b/mobileplatform/mainmcu/makefile
@@ -4,9 +4,13 @@ STL = st-flash
 clean:
 	pio run --target clean
 
-flash: clean
+build:
 	pio run
-	$(BIN) -O binary .pio/build/genericSTM32F103C8/firmware.elf app.bin
+
+all: clean build flash
+
+flash: 
+	$(BIN) -O binary .pio/build/genericSTM32F103C8/firmware_mainmcu_genericSTM32F103C8.elf app.bin
 	$(STL) write app.bin 0x8000000
 
 erase:
